# scRNA-seq-analysis-pipeline

./: .gitignore  .readthedocs.yaml  README.md  main.nf  nextflow.config  pyproject.toml  samplesheet.csv  scRNA.sh
docs/: conf.py  index.md
modules/: QC.nf  cellbender.nf  check_cb_samplesheet.nf  demultiplex.nf  integration.nf  integration_metrics.nf  integration_plots.nf  merge_adatas.nf  plot_QC.nf  run_QC.nf
